form fix reminder

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>WHERE EVERY STEP LEADS TO A NEW HORIZON</h1>
         </div>
     </div>
-
+    <!-- fix the css of form  -->
     <div class="formbox">
         <form class="form">
             <div class="formgroup">
